// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login renders correctly with invalid data 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Container
    text={true}
>
    <Grid
        centered={true}
        stackable={true}
    >
        <GridColumn
            className="login-form-grid-column"
        >
            <Header
                as="h2"
                color="teal"
                textAlign="center"
            >
                <Image
                    as="img"
                    className="home-logo"
                    src="md-logo-green.png"
                    ui={true}
                />
                 
                Register User
            </Header>
            <Form
                as="form"
                onSubmit={[Function]}
                size="large"
            >
                <Segment
                    stacked={true}
                >
                    <Grid
                        columns={2}
                    >
                        <GridRow>
                            <GridColumn
                                width={10}
                            >
                                <FormField>
                                    <Input
                                        autoComplete="email"
                                        className="text-box-3-col"
                                        defaultValue=""
                                        name="email"
                                        onChange={[Function]}
                                        placeholder="Email..."
                                        type="email"
                                    />
                                </FormField>
                            </GridColumn>
                            <GridColumn
                                width={6}
                            >
                                <Label
                                    basic={true}
                                    color="red"
                                    pointing="left"
                                >
                                     not an email
                                </Label>
                            </GridColumn>
                        </GridRow>
                        <GridRow>
                            <GridColumn
                                width={10}
                            >
                                <FormField>
                                    <Input
                                        autoComplete="username"
                                        className="text-box-3-col"
                                        defaultValue=""
                                        name="username"
                                        onChange={[Function]}
                                        placeholder="Username..."
                                        type="text"
                                    />
                                </FormField>
                            </GridColumn>
                            <GridColumn
                                width={6}
                            >
                                <Label
                                    basic={true}
                                    color="red"
                                    pointing="left"
                                >
                                     is too short
                                </Label>
                            </GridColumn>
                        </GridRow>
                        <GridRow>
                            <GridColumn
                                width={10}
                            >
                                <FormField>
                                    <Input
                                        autoComplete="password"
                                        className="text-box-3-col"
                                        defaultValue=""
                                        name="password"
                                        onChange={[Function]}
                                        placeholder="Password..."
                                        type="password"
                                    />
                                </FormField>
                            </GridColumn>
                            <GridColumn
                                width={6}
                            >
                                <Label
                                    basic={true}
                                    color="red"
                                    pointing="left"
                                >
                                     is too short
                                </Label>
                            </GridColumn>
                        </GridRow>
                        <GridRow>
                            <GridColumn
                                width={10}
                            >
                                <FormField>
                                    <Input
                                        autoComplete="password"
                                        className="text-box-3-col"
                                        name="confirmPassword"
                                        onChange={[Function]}
                                        placeholder="Confirm Password..."
                                        type="password"
                                    />
                                </FormField>
                            </GridColumn>
                            <GridColumn
                                width={6}
                            >
                                <Label
                                    basic={true}
                                    color="red"
                                    pointing="left"
                                >
                                     does not match
                                </Label>
                            </GridColumn>
                        </GridRow>
                        <GridRow />
                    </Grid>
                    <Button
                        as="button"
                        color="pink"
                        disabled={true}
                        fluid={true}
                        size="large"
                        type="submit"
                    >
                        Register
                    </Button>
                </Segment>
            </Form>
        </GridColumn>
    </Grid>
</Container>,
  "nodes": Array [
    <Container
      text={true}
>
      <Grid
            centered={true}
            stackable={true}
      >
            <GridColumn
                  className="login-form-grid-column"
            >
                  <Header
                        as="h2"
                        color="teal"
                        textAlign="center"
                  >
                        <Image
                              as="img"
                              className="home-logo"
                              src="md-logo-green.png"
                              ui={true}
                        />
                         
                        Register User
                  </Header>
                  <Form
                        as="form"
                        onSubmit={[Function]}
                        size="large"
                  >
                        <Segment
                              stacked={true}
                        >
                              <Grid
                                    columns={2}
                              >
                                    <GridRow>
                                          <GridColumn
                                                width={10}
                                          >
                                                <FormField>
                                                      <Input
                                                            autoComplete="email"
                                                            className="text-box-3-col"
                                                            defaultValue=""
                                                            name="email"
                                                            onChange={[Function]}
                                                            placeholder="Email..."
                                                            type="email"
                                                      />
                                                </FormField>
                                          </GridColumn>
                                          <GridColumn
                                                width={6}
                                          >
                                                <Label
                                                      basic={true}
                                                      color="red"
                                                      pointing="left"
                                                >
                                                       not an email
                                                </Label>
                                          </GridColumn>
                                    </GridRow>
                                    <GridRow>
                                          <GridColumn
                                                width={10}
                                          >
                                                <FormField>
                                                      <Input
                                                            autoComplete="username"
                                                            className="text-box-3-col"
                                                            defaultValue=""
                                                            name="username"
                                                            onChange={[Function]}
                                                            placeholder="Username..."
                                                            type="text"
                                                      />
                                                </FormField>
                                          </GridColumn>
                                          <GridColumn
                                                width={6}
                                          >
                                                <Label
                                                      basic={true}
                                                      color="red"
                                                      pointing="left"
                                                >
                                                       is too short
                                                </Label>
                                          </GridColumn>
                                    </GridRow>
                                    <GridRow>
                                          <GridColumn
                                                width={10}
                                          >
                                                <FormField>
                                                      <Input
                                                            autoComplete="password"
                                                            className="text-box-3-col"
                                                            defaultValue=""
                                                            name="password"
                                                            onChange={[Function]}
                                                            placeholder="Password..."
                                                            type="password"
                                                      />
                                                </FormField>
                                          </GridColumn>
                                          <GridColumn
                                                width={6}
                                          >
                                                <Label
                                                      basic={true}
                                                      color="red"
                                                      pointing="left"
                                                >
                                                       is too short
                                                </Label>
                                          </GridColumn>
                                    </GridRow>
                                    <GridRow>
                                          <GridColumn
                                                width={10}
                                          >
                                                <FormField>
                                                      <Input
                                                            autoComplete="password"
                                                            className="text-box-3-col"
                                                            name="confirmPassword"
                                                            onChange={[Function]}
                                                            placeholder="Confirm Password..."
                                                            type="password"
                                                      />
                                                </FormField>
                                          </GridColumn>
                                          <GridColumn
                                                width={6}
                                          >
                                                <Label
                                                      basic={true}
                                                      color="red"
                                                      pointing="left"
                                                >
                                                       does not match
                                                </Label>
                                          </GridColumn>
                                    </GridRow>
                                    <GridRow />
                              </Grid>
                              <Button
                                    as="button"
                                    color="pink"
                                    disabled={true}
                                    fluid={true}
                                    size="large"
                                    type="submit"
                              >
                                    Register
                              </Button>
                        </Segment>
                  </Form>
            </GridColumn>
      </Grid>
</Container>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Register
        data={
                Object {
                        "confirmPassword": "",
                        "email": "",
                        "password": "",
                        "username": "",
                      }
        }
        formErrors={
                Object {
                        "confirmPassword": " does not match",
                        "email": " not an email",
                        "password": " is too short",
                        "username": " is too short",
                      }
        }
        handleChange={[Function]}
        handleSubmit={[Function]}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "data": Object {
            "confirmPassword": "",
            "email": "",
            "password": "",
            "username": "",
          },
          "formErrors": Object {
            "confirmPassword": " does not match",
            "email": " not an email",
            "password": " is too short",
            "username": " is too short",
          },
          "handleChange": [Function],
          "handleSubmit": [Function],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <Container
          text={true}
>
          <Grid
                    centered={true}
                    stackable={true}
          >
                    <GridColumn
                              className="login-form-grid-column"
                    >
                              <Header
                                        as="h2"
                                        color="teal"
                                        textAlign="center"
                              >
                                        <Image
                                                  as="img"
                                                  className="home-logo"
                                                  src="md-logo-green.png"
                                                  ui={true}
                                        />
                                         
                                        Register User
                              </Header>
                              <Form
                                        as="form"
                                        onSubmit={[Function]}
                                        size="large"
                              >
                                        <Segment
                                                  stacked={true}
                                        >
                                                  <Grid
                                                            columns={2}
                                                  >
                                                            <GridRow>
                                                                      <GridColumn
                                                                                width={10}
                                                                      >
                                                                                <FormField>
                                                                                          <Input
                                                                                                    autoComplete="email"
                                                                                                    className="text-box-3-col"
                                                                                                    defaultValue=""
                                                                                                    name="email"
                                                                                                    onChange={[Function]}
                                                                                                    placeholder="Email..."
                                                                                                    type="email"
                                                                                          />
                                                                                </FormField>
                                                                      </GridColumn>
                                                                      <GridColumn
                                                                                width={6}
                                                                      >
                                                                                <Label
                                                                                          basic={true}
                                                                                          color="red"
                                                                                          pointing="left"
                                                                                >
                                                                                           not an email
                                                                                </Label>
                                                                      </GridColumn>
                                                            </GridRow>
                                                            <GridRow>
                                                                      <GridColumn
                                                                                width={10}
                                                                      >
                                                                                <FormField>
                                                                                          <Input
                                                                                                    autoComplete="username"
                                                                                                    className="text-box-3-col"
                                                                                                    defaultValue=""
                                                                                                    name="username"
                                                                                                    onChange={[Function]}
                                                                                                    placeholder="Username..."
                                                                                                    type="text"
                                                                                          />
                                                                                </FormField>
                                                                      </GridColumn>
                                                                      <GridColumn
                                                                                width={6}
                                                                      >
                                                                                <Label
                                                                                          basic={true}
                                                                                          color="red"
                                                                                          pointing="left"
                                                                                >
                                                                                           is too short
                                                                                </Label>
                                                                      </GridColumn>
                                                            </GridRow>
                                                            <GridRow>
                                                                      <GridColumn
                                                                                width={10}
                                                                      >
                                                                                <FormField>
                                                                                          <Input
                                                                                                    autoComplete="password"
                                                                                                    className="text-box-3-col"
                                                                                                    defaultValue=""
                                                                                                    name="password"
                                                                                                    onChange={[Function]}
                                                                                                    placeholder="Password..."
                                                                                                    type="password"
                                                                                          />
                                                                                </FormField>
                                                                      </GridColumn>
                                                                      <GridColumn
                                                                                width={6}
                                                                      >
                                                                                <Label
                                                                                          basic={true}
                                                                                          color="red"
                                                                                          pointing="left"
                                                                                >
                                                                                           is too short
                                                                                </Label>
                                                                      </GridColumn>
                                                            </GridRow>
                                                            <GridRow>
                                                                      <GridColumn
                                                                                width={10}
                                                                      >
                                                                                <FormField>
                                                                                          <Input
                                                                                                    autoComplete="password"
                                                                                                    className="text-box-3-col"
                                                                                                    name="confirmPassword"
                                                                                                    onChange={[Function]}
                                                                                                    placeholder="Confirm Password..."
                                                                                                    type="password"
                                                                                          />
                                                                                </FormField>
                                                                      </GridColumn>
                                                                      <GridColumn
                                                                                width={6}
                                                                      >
                                                                                <Label
                                                                                          basic={true}
                                                                                          color="red"
                                                                                          pointing="left"
                                                                                >
                                                                                           does not match
                                                                                </Label>
                                                                      </GridColumn>
                                                            </GridRow>
                                                            <GridRow />
                                                  </Grid>
                                                  <Button
                                                            as="button"
                                                            color="pink"
                                                            disabled={true}
                                                            fluid={true}
                                                            size="large"
                                                            type="submit"
                                                  >
                                                            Register
                                                  </Button>
                                        </Segment>
                              </Form>
                    </GridColumn>
          </Grid>
</Container>,
        "_debugID": 4,
        "_renderedOutput": <Container
          text={true}
>
          <Grid
                    centered={true}
                    stackable={true}
          >
                    <GridColumn
                              className="login-form-grid-column"
                    >
                              <Header
                                        as="h2"
                                        color="teal"
                                        textAlign="center"
                              >
                                        <Image
                                                  as="img"
                                                  className="home-logo"
                                                  src="md-logo-green.png"
                                                  ui={true}
                                        />
                                         
                                        Register User
                              </Header>
                              <Form
                                        as="form"
                                        onSubmit={[Function]}
                                        size="large"
                              >
                                        <Segment
                                                  stacked={true}
                                        >
                                                  <Grid
                                                            columns={2}
                                                  >
                                                            <GridRow>
                                                                      <GridColumn
                                                                                width={10}
                                                                      >
                                                                                <FormField>
                                                                                          <Input
                                                                                                    autoComplete="email"
                                                                                                    className="text-box-3-col"
                                                                                                    defaultValue=""
                                                                                                    name="email"
                                                                                                    onChange={[Function]}
                                                                                                    placeholder="Email..."
                                                                                                    type="email"
                                                                                          />
                                                                                </FormField>
                                                                      </GridColumn>
                                                                      <GridColumn
                                                                                width={6}
                                                                      >
                                                                                <Label
                                                                                          basic={true}
                                                                                          color="red"
                                                                                          pointing="left"
                                                                                >
                                                                                           not an email
                                                                                </Label>
                                                                      </GridColumn>
                                                            </GridRow>
                                                            <GridRow>
                                                                      <GridColumn
                                                                                width={10}
                                                                      >
                                                                                <FormField>
                                                                                          <Input
                                                                                                    autoComplete="username"
                                                                                                    className="text-box-3-col"
                                                                                                    defaultValue=""
                                                                                                    name="username"
                                                                                                    onChange={[Function]}
                                                                                                    placeholder="Username..."
                                                                                                    type="text"
                                                                                          />
                                                                                </FormField>
                                                                      </GridColumn>
                                                                      <GridColumn
                                                                                width={6}
                                                                      >
                                                                                <Label
                                                                                          basic={true}
                                                                                          color="red"
                                                                                          pointing="left"
                                                                                >
                                                                                           is too short
                                                                                </Label>
                                                                      </GridColumn>
                                                            </GridRow>
                                                            <GridRow>
                                                                      <GridColumn
                                                                                width={10}
                                                                      >
                                                                                <FormField>
                                                                                          <Input
                                                                                                    autoComplete="password"
                                                                                                    className="text-box-3-col"
                                                                                                    defaultValue=""
                                                                                                    name="password"
                                                                                                    onChange={[Function]}
                                                                                                    placeholder="Password..."
                                                                                                    type="password"
                                                                                          />
                                                                                </FormField>
                                                                      </GridColumn>
                                                                      <GridColumn
                                                                                width={6}
                                                                      >
                                                                                <Label
                                                                                          basic={true}
                                                                                          color="red"
                                                                                          pointing="left"
                                                                                >
                                                                                           is too short
                                                                                </Label>
                                                                      </GridColumn>
                                                            </GridRow>
                                                            <GridRow>
                                                                      <GridColumn
                                                                                width={10}
                                                                      >
                                                                                <FormField>
                                                                                          <Input
                                                                                                    autoComplete="password"
                                                                                                    className="text-box-3-col"
                                                                                                    name="confirmPassword"
                                                                                                    onChange={[Function]}
                                                                                                    placeholder="Confirm Password..."
                                                                                                    type="password"
                                                                                          />
                                                                                </FormField>
                                                                      </GridColumn>
                                                                      <GridColumn
                                                                                width={6}
                                                                      >
                                                                                <Label
                                                                                          basic={true}
                                                                                          color="red"
                                                                                          pointing="left"
                                                                                >
                                                                                           does not match
                                                                                </Label>
                                                                      </GridColumn>
                                                            </GridRow>
                                                            <GridRow />
                                                  </Grid>
                                                  <Button
                                                            as="button"
                                                            color="pink"
                                                            disabled={true}
                                                            fluid={true}
                                                            size="large"
                                                            type="submit"
                                                  >
                                                            Register
                                                  </Button>
                                        </Segment>
                              </Form>
                    </GridColumn>
          </Grid>
</Container>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Register
    data={
        Object {
            "confirmPassword": "",
            "email": "",
            "password": "",
            "username": "",
          }
    }
    formErrors={
        Object {
            "confirmPassword": " does not match",
            "email": " not an email",
            "password": " is too short",
            "username": " is too short",
          }
    }
    handleChange={[Function]}
    handleSubmit={[Function]}
/>,
}
`;

exports[`Login renders correctly with valid data 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Container
    text={true}
>
    <Grid
        centered={true}
        stackable={true}
    >
        <GridColumn
            className="login-form-grid-column"
        >
            <Header
                as="h2"
                color="teal"
                textAlign="center"
            >
                <Image
                    as="img"
                    className="home-logo"
                    src="md-logo-green.png"
                    ui={true}
                />
                 
                Register User
            </Header>
            <Form
                as="form"
                onSubmit={[Function]}
                size="large"
            >
                <Segment
                    stacked={true}
                >
                    <Grid
                        columns={2}
                    >
                        <GridRow>
                            <GridColumn
                                width={10}
                            >
                                <FormField>
                                    <Input
                                        autoComplete="email"
                                        className="text-box-3-col"
                                        defaultValue=""
                                        name="email"
                                        onChange={[Function]}
                                        placeholder="Email..."
                                        type="email"
                                    />
                                </FormField>
                            </GridColumn>
                            <GridColumn
                                width={6}
                            />
                        </GridRow>
                        <GridRow>
                            <GridColumn
                                width={10}
                            >
                                <FormField>
                                    <Input
                                        autoComplete="username"
                                        className="text-box-3-col"
                                        defaultValue=""
                                        name="username"
                                        onChange={[Function]}
                                        placeholder="Username..."
                                        type="text"
                                    />
                                </FormField>
                            </GridColumn>
                            <GridColumn
                                width={6}
                            />
                        </GridRow>
                        <GridRow>
                            <GridColumn
                                width={10}
                            >
                                <FormField>
                                    <Input
                                        autoComplete="password"
                                        className="text-box-3-col"
                                        defaultValue=""
                                        name="password"
                                        onChange={[Function]}
                                        placeholder="Password..."
                                        type="password"
                                    />
                                </FormField>
                            </GridColumn>
                            <GridColumn
                                width={6}
                            />
                        </GridRow>
                        <GridRow>
                            <GridColumn
                                width={10}
                            >
                                <FormField>
                                    <Input
                                        autoComplete="password"
                                        className="text-box-3-col"
                                        name="confirmPassword"
                                        onChange={[Function]}
                                        placeholder="Confirm Password..."
                                        type="password"
                                    />
                                </FormField>
                            </GridColumn>
                            <GridColumn
                                width={6}
                            />
                        </GridRow>
                        <GridRow />
                    </Grid>
                    <Button
                        as="button"
                        color="pink"
                        disabled={true}
                        fluid={true}
                        size="large"
                        type="submit"
                    >
                        Register
                    </Button>
                </Segment>
            </Form>
        </GridColumn>
    </Grid>
</Container>,
  "nodes": Array [
    <Container
      text={true}
>
      <Grid
            centered={true}
            stackable={true}
      >
            <GridColumn
                  className="login-form-grid-column"
            >
                  <Header
                        as="h2"
                        color="teal"
                        textAlign="center"
                  >
                        <Image
                              as="img"
                              className="home-logo"
                              src="md-logo-green.png"
                              ui={true}
                        />
                         
                        Register User
                  </Header>
                  <Form
                        as="form"
                        onSubmit={[Function]}
                        size="large"
                  >
                        <Segment
                              stacked={true}
                        >
                              <Grid
                                    columns={2}
                              >
                                    <GridRow>
                                          <GridColumn
                                                width={10}
                                          >
                                                <FormField>
                                                      <Input
                                                            autoComplete="email"
                                                            className="text-box-3-col"
                                                            defaultValue=""
                                                            name="email"
                                                            onChange={[Function]}
                                                            placeholder="Email..."
                                                            type="email"
                                                      />
                                                </FormField>
                                          </GridColumn>
                                          <GridColumn
                                                width={6}
                                          />
                                    </GridRow>
                                    <GridRow>
                                          <GridColumn
                                                width={10}
                                          >
                                                <FormField>
                                                      <Input
                                                            autoComplete="username"
                                                            className="text-box-3-col"
                                                            defaultValue=""
                                                            name="username"
                                                            onChange={[Function]}
                                                            placeholder="Username..."
                                                            type="text"
                                                      />
                                                </FormField>
                                          </GridColumn>
                                          <GridColumn
                                                width={6}
                                          />
                                    </GridRow>
                                    <GridRow>
                                          <GridColumn
                                                width={10}
                                          >
                                                <FormField>
                                                      <Input
                                                            autoComplete="password"
                                                            className="text-box-3-col"
                                                            defaultValue=""
                                                            name="password"
                                                            onChange={[Function]}
                                                            placeholder="Password..."
                                                            type="password"
                                                      />
                                                </FormField>
                                          </GridColumn>
                                          <GridColumn
                                                width={6}
                                          />
                                    </GridRow>
                                    <GridRow>
                                          <GridColumn
                                                width={10}
                                          >
                                                <FormField>
                                                      <Input
                                                            autoComplete="password"
                                                            className="text-box-3-col"
                                                            name="confirmPassword"
                                                            onChange={[Function]}
                                                            placeholder="Confirm Password..."
                                                            type="password"
                                                      />
                                                </FormField>
                                          </GridColumn>
                                          <GridColumn
                                                width={6}
                                          />
                                    </GridRow>
                                    <GridRow />
                              </Grid>
                              <Button
                                    as="button"
                                    color="pink"
                                    disabled={true}
                                    fluid={true}
                                    size="large"
                                    type="submit"
                              >
                                    Register
                              </Button>
                        </Segment>
                  </Form>
            </GridColumn>
      </Grid>
</Container>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Register
        data={
                Object {
                        "confirmPassword": "",
                        "email": "",
                        "password": "",
                        "username": "",
                      }
        }
        formErrors={
                Object {
                        "confirmPassword": "",
                        "email": "",
                        "password": "",
                        "username": "",
                      }
        }
        handleChange={[Function]}
        handleSubmit={[Function]}
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "data": Object {
            "confirmPassword": "",
            "email": "",
            "password": "",
            "username": "",
          },
          "formErrors": Object {
            "confirmPassword": "",
            "email": "",
            "password": "",
            "username": "",
          },
          "handleChange": [Function],
          "handleSubmit": [Function],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <Container
          text={true}
>
          <Grid
                    centered={true}
                    stackable={true}
          >
                    <GridColumn
                              className="login-form-grid-column"
                    >
                              <Header
                                        as="h2"
                                        color="teal"
                                        textAlign="center"
                              >
                                        <Image
                                                  as="img"
                                                  className="home-logo"
                                                  src="md-logo-green.png"
                                                  ui={true}
                                        />
                                         
                                        Register User
                              </Header>
                              <Form
                                        as="form"
                                        onSubmit={[Function]}
                                        size="large"
                              >
                                        <Segment
                                                  stacked={true}
                                        >
                                                  <Grid
                                                            columns={2}
                                                  >
                                                            <GridRow>
                                                                      <GridColumn
                                                                                width={10}
                                                                      >
                                                                                <FormField>
                                                                                          <Input
                                                                                                    autoComplete="email"
                                                                                                    className="text-box-3-col"
                                                                                                    defaultValue=""
                                                                                                    name="email"
                                                                                                    onChange={[Function]}
                                                                                                    placeholder="Email..."
                                                                                                    type="email"
                                                                                          />
                                                                                </FormField>
                                                                      </GridColumn>
                                                                      <GridColumn
                                                                                width={6}
                                                                      />
                                                            </GridRow>
                                                            <GridRow>
                                                                      <GridColumn
                                                                                width={10}
                                                                      >
                                                                                <FormField>
                                                                                          <Input
                                                                                                    autoComplete="username"
                                                                                                    className="text-box-3-col"
                                                                                                    defaultValue=""
                                                                                                    name="username"
                                                                                                    onChange={[Function]}
                                                                                                    placeholder="Username..."
                                                                                                    type="text"
                                                                                          />
                                                                                </FormField>
                                                                      </GridColumn>
                                                                      <GridColumn
                                                                                width={6}
                                                                      />
                                                            </GridRow>
                                                            <GridRow>
                                                                      <GridColumn
                                                                                width={10}
                                                                      >
                                                                                <FormField>
                                                                                          <Input
                                                                                                    autoComplete="password"
                                                                                                    className="text-box-3-col"
                                                                                                    defaultValue=""
                                                                                                    name="password"
                                                                                                    onChange={[Function]}
                                                                                                    placeholder="Password..."
                                                                                                    type="password"
                                                                                          />
                                                                                </FormField>
                                                                      </GridColumn>
                                                                      <GridColumn
                                                                                width={6}
                                                                      />
                                                            </GridRow>
                                                            <GridRow>
                                                                      <GridColumn
                                                                                width={10}
                                                                      >
                                                                                <FormField>
                                                                                          <Input
                                                                                                    autoComplete="password"
                                                                                                    className="text-box-3-col"
                                                                                                    name="confirmPassword"
                                                                                                    onChange={[Function]}
                                                                                                    placeholder="Confirm Password..."
                                                                                                    type="password"
                                                                                          />
                                                                                </FormField>
                                                                      </GridColumn>
                                                                      <GridColumn
                                                                                width={6}
                                                                      />
                                                            </GridRow>
                                                            <GridRow />
                                                  </Grid>
                                                  <Button
                                                            as="button"
                                                            color="pink"
                                                            disabled={true}
                                                            fluid={true}
                                                            size="large"
                                                            type="submit"
                                                  >
                                                            Register
                                                  </Button>
                                        </Segment>
                              </Form>
                    </GridColumn>
          </Grid>
</Container>,
        "_debugID": 2,
        "_renderedOutput": <Container
          text={true}
>
          <Grid
                    centered={true}
                    stackable={true}
          >
                    <GridColumn
                              className="login-form-grid-column"
                    >
                              <Header
                                        as="h2"
                                        color="teal"
                                        textAlign="center"
                              >
                                        <Image
                                                  as="img"
                                                  className="home-logo"
                                                  src="md-logo-green.png"
                                                  ui={true}
                                        />
                                         
                                        Register User
                              </Header>
                              <Form
                                        as="form"
                                        onSubmit={[Function]}
                                        size="large"
                              >
                                        <Segment
                                                  stacked={true}
                                        >
                                                  <Grid
                                                            columns={2}
                                                  >
                                                            <GridRow>
                                                                      <GridColumn
                                                                                width={10}
                                                                      >
                                                                                <FormField>
                                                                                          <Input
                                                                                                    autoComplete="email"
                                                                                                    className="text-box-3-col"
                                                                                                    defaultValue=""
                                                                                                    name="email"
                                                                                                    onChange={[Function]}
                                                                                                    placeholder="Email..."
                                                                                                    type="email"
                                                                                          />
                                                                                </FormField>
                                                                      </GridColumn>
                                                                      <GridColumn
                                                                                width={6}
                                                                      />
                                                            </GridRow>
                                                            <GridRow>
                                                                      <GridColumn
                                                                                width={10}
                                                                      >
                                                                                <FormField>
                                                                                          <Input
                                                                                                    autoComplete="username"
                                                                                                    className="text-box-3-col"
                                                                                                    defaultValue=""
                                                                                                    name="username"
                                                                                                    onChange={[Function]}
                                                                                                    placeholder="Username..."
                                                                                                    type="text"
                                                                                          />
                                                                                </FormField>
                                                                      </GridColumn>
                                                                      <GridColumn
                                                                                width={6}
                                                                      />
                                                            </GridRow>
                                                            <GridRow>
                                                                      <GridColumn
                                                                                width={10}
                                                                      >
                                                                                <FormField>
                                                                                          <Input
                                                                                                    autoComplete="password"
                                                                                                    className="text-box-3-col"
                                                                                                    defaultValue=""
                                                                                                    name="password"
                                                                                                    onChange={[Function]}
                                                                                                    placeholder="Password..."
                                                                                                    type="password"
                                                                                          />
                                                                                </FormField>
                                                                      </GridColumn>
                                                                      <GridColumn
                                                                                width={6}
                                                                      />
                                                            </GridRow>
                                                            <GridRow>
                                                                      <GridColumn
                                                                                width={10}
                                                                      >
                                                                                <FormField>
                                                                                          <Input
                                                                                                    autoComplete="password"
                                                                                                    className="text-box-3-col"
                                                                                                    name="confirmPassword"
                                                                                                    onChange={[Function]}
                                                                                                    placeholder="Confirm Password..."
                                                                                                    type="password"
                                                                                          />
                                                                                </FormField>
                                                                      </GridColumn>
                                                                      <GridColumn
                                                                                width={6}
                                                                      />
                                                            </GridRow>
                                                            <GridRow />
                                                  </Grid>
                                                  <Button
                                                            as="button"
                                                            color="pink"
                                                            disabled={true}
                                                            fluid={true}
                                                            size="large"
                                                            type="submit"
                                                  >
                                                            Register
                                                  </Button>
                                        </Segment>
                              </Form>
                    </GridColumn>
          </Grid>
</Container>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Register
    data={
        Object {
            "confirmPassword": "",
            "email": "",
            "password": "",
            "username": "",
          }
    }
    formErrors={
        Object {
            "confirmPassword": "",
            "email": "",
            "password": "",
            "username": "",
          }
    }
    handleChange={[Function]}
    handleSubmit={[Function]}
/>,
}
`;
